--- a/styles/main1.css
+++ b/styles/main1.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    background: url(./background.jpg);
+    background: url("../img/banner-img.jpg");
     background-size: cover;
 }
 
